@@ -7,8 +7,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - stronghold patches [Todd R. Eigenschink <todd@tekinteractive.com>]
 
-- <Perl>/%Apache::ReadConfig:: brokeness (My::configure() example, Eric Cholet)
-
 - Apache->push_handlers("PerlCleanupHandler", ...),
   the handler isn't called unless there's already a CleanupHandler defined.
   Jan-Pieter Cornet <johnpc@xs4all.net>
